# mech2d

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.py
doc/: .gitignore  conf.py  index.rst
docs/: conf.py  requirements.txt
examples/GeSe-RC/: README.md  run.sh
examples/GeSe-RC/elc_energy/: Deformed_Parameters.json  Mech2D.json
examples/GeSe-RC/elc_energy/Def_1/Def_1_001/: CONTCAR  POSCAR  energy.json  vasprun.xml
examples/alpha-P-R/: README  README.md  Result.json  run.sh
examples/alpha-P-R/elc_energy/: Deformed_Parameters.json  Mech2D.json
examples/alpha-P-R/elc_stress/: Deformed_Parameters.json  Mech2D.json
examples/alpha-P-R/opt/: INCAR  POSCAR  alpha-P-R.vasp  sub.sh  vasprun.xml
examples/alpha-P-R/ssc_stress/: Deformed_Parameters.json  Mech2D.json
examples/graphene/: INCAR  POSCAR  README.md  input.yaml  run.sh
examples/graphene/elc_energy/: Deformed_Parameters.json  Mech2D.json
examples/graphene/elc_stress/: Deformed_Parameters.json  Mech2D.json
examples/graphene/opt/: CONTCAR  INCAR  KPOINTS  POSCAR  sub.sh  vasprun.xml
examples/input/: INCAR  input.yaml  input_cvasp.yaml
examples/method_and_results/: Elastic_2D_calculation_and_results.html  Elastic_2D_calculation_and_results.ipynb
gui/: gui.py  input.yaml
mech2d/: __init__.py  _date.py  _version.py  analysis.py  bravais.py  constants.py  logo.py  main.py  mechanics.py  parser.py  plot.py  utils.py
mech2d/calculation/: calculator.py  runtask.py  vasp.py
mech2d/scripts/: cvasp.py  submit_slurm_parallel.sh  submit_slurm_serial.sh
(+681 files in other folders)
