[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mech2d"
dynamic = ["version"]
requires-python = ">=3.8"
keywords = ["2D materials", "mechanical properties", "DFT"]
description = "mech2d: a calculator for two dimensional material mechanical properties"
authors = [
  {name = "Haidi Wang", email = "haidi@hfut.edu.cn"},
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
dependencies = [
    'numpy>=1.21.2',
    'pymatgen==2023.7.17',
    'dpdispatcher==0.3.39',
    'custodian==2021.2.8'
]
readme = "README.md"

[project.urls]
Homepage = "https://gitee.com/haidi-hfut/mech2d"
documentation = "https://mech2d.readthedocs.io/en/latest/"
repository = "https://gitee.com/haidi-hfut/mech2d"

[project.entry-points.console_scripts]
m2d = "mech2d.main:main"
cvasp = "mech2d.scripts.cvasp:main"

[tool.setuptools.package-data]
scripts = ['mech2d/scripts/','mech2d/scripts/submit_slurm_serial.sh']

[tool.setuptools.packages.find]
include = ["mech2d*"]

[tool.setuptools_scm]
write_to = "mech2d/_version.py"
